syntax = "proto3";

package api.colonio.v1alpha;

import "api/colonio/v1alpha/core.proto";

option go_package = "github.com/llamerada-jp/colonio/api/colonio/v1alpha";

// node-node packet container
// Or use an empty message as a ping to cancel the timeout.
message NodePackets { repeated NodePacket packets = 1; }

message NodePacketHead {
  NodeID dst_node_id = 1;
  NodeID src_node_id = 2;
  uint32 hop_count = 3;
  uint32 mode = 4;
}

message NodePacket {
  // Enable head if index is 0.
  NodePacketHead head = 1;
  // ID is common to sequence of packets.
  uint32 id = 2;
  // index decreases by 1 in a sequence of packets.
  uint32 index = 3;
  bytes content = 4;
}

//
message PacketContent {
  oneof content {
    Error error = 1;

    Routing routing = 10;

    Messaging messaging = 20;
    MessagingResponse messaging_response = 21;

    RaftFit raft_fit = 30;
    RaftFitResponse raft_fit_response = 31;
    RaftConfig raft_config = 32;
    RaftConfigResponse raft_config_response = 33;
    RaftMessage raft_message = 34;

    Spread spread = 50;
    SpreadKnock spread_knock = 51;
    SpreadKnockResponse spread_knock_response = 52;
    SpreadRelay spread_relay = 53;
    SpreadRelayResponse spread_relay_response = 54;
  }
}

message Error {
  uint32 code = 1;
  string message = 2;
}

// for routing
message RoutingNodeRecord {
  int64 r1d_score = 1;
  Coordinate r2d_position = 2;
}

message Routing {
  Coordinate r2d_position = 1;
  // Key type of map is string from node-id.
  map<string, RoutingNodeRecord> node_records = 2;
}

// for messaging module
message Messaging {
  string name = 1;
  bytes message = 2;
}

message MessagingResponse { 
  bytes response = 1;
}

// for raft
enum RaftFitStage {
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  RAFT_FIT_STAGE_EMPTY = 0;
  RAFT_FIT_STAGE_ACTIVE = 1;
}

message RaftFit {
  RaftFitStage stage = 1;
  uint64 head = 2;
  uint64 tail = 3;
}

message RaftFitResponse {
  bool contradiction = 1;
}

enum RaftConfigCommand {
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  RAFT_CONFIG_COMMAND_CREATE = 0;
  RAFT_CONFIG_COMMAND_APPEND = 1;
}

message RaftConfig {
  bytes cluster_id = 1; // UUID of the cluster
  RaftConfigCommand command = 2;
  uint64 sequence = 3;
  map<uint64, NodeID> members = 5;  
}

message RaftConfigResponse {
  bytes cluster_id = 1;
  uint64 sequence = 2;
}

message RaftMessage {
  bytes cluster_id = 1;
  uint64 sequence = 2;
  bytes message = 3;
}

// for spread module
message Spread {
  NodeID source = 1;
  Coordinate center = 2;
  double r = 3;
  uint64 uid = 4;
  string name = 5;
  bytes message = 6;
  uint32 opt = 7;
}

message SpreadKnock {
  Coordinate center = 1;
  double r = 2;
  uint64 uid = 3;
}

message SpreadKnockResponse {
  bool accept = 1;
}

message SpreadRelay {
  NodeID source = 1;
  Coordinate center = 2;
  double r = 3;
  uint64 uid = 4;
  string name = 5;
  bytes message = 6;
  uint32 opt = 7;
}

message SpreadRelayResponse {
  bool success = 1;
}
